# Ai-hackathon

./: .env.example  .gitignore  AUDIT_REPORT_EXPLANATION.md  DOCKER_STRATEGY.md  Dockerfile.api  Dockerfile.mcp  LICENSE  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt
docker/: mcp-service.js  package.json
docs/: mcp_tools_documentation_2025-10-25_15-17-08.txt
frontend/routes/: web.py
frontend/static/css/: main.css  style.css
frontend/static/js/: app.js  main.js
frontend/templates/: base.html  dashboard.html  index.html  redoc.html  report.html  result.html
src/app/: main.py
src/app/routes/: audit.py  health.py
src/business/: audit_logic.py
src/clients/: http_mcp_client.py  llm_client.py  mcp_tool_client.py  service_factory.py
src/config/: config.py  logging_config.py
src/helpers/: exceptions.py  validators.py
src/middleware/: logging_middleware.py
src/prompts/: prompts.py
src/schemas/: requests.py  responses.py
src/utils/: log_context.py  logger.py  mcp_tools_exporter.py
