[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-audit-agent"
version = "1.0.0"
description = "Enterprise-Grade Autonomous Web Performance & Security Auditor using OpenAI + Chrome DevTools MCP"
authors = [{name = "Web Audit Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["web-audit", "performance", "security", "openai", "chrome-devtools", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # AI/LLM Integration
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    
    # Data Validation & Settings
    "pydantic>=2.4.0",
    "pydantic-settings>=2.1.0",
    
    # Web Framework & Server
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    
    # Frontend Templates
    "jinja2>=3.1.0",
    
    # System Monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "pip-tools>=7.3.0",  # For dependency hashing
]

[project.scripts]
web-audit = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"